objects/ASI_CN_NPL_VIP_Plan__c.object
<CustomObject>
    <description>ASI CN NPL VIP Launch Plan, Child object of NPL Request</description>
    <fields>
        <fullName>ASI_CN_NPL_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sample_Requirement__c</fullName>
        <label>Sample Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Product_Launch_Request__c</fullName>
        <label>New Product Launch Request</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>VIP Launch Plans</relationshipLabel>
        <relationshipName>New_Product_VIP_Launch_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VIP Launch Plan</label>
    <nameField>
        <displayFormat>VIP-{YY}-{00000}</displayFormat>
        <label>VIP Launch Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Launch Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>